# scalar

./: .gitignore  .gitmodules  Cargo.reth.toml  Cargo.toml  EVMOS.md  README.md  config.toml  test-genesis.json  test.tsx
crates-reth/test-cluster/: Cargo.toml
crates-reth/test-cluster/src/: lib.rs
crates/scalar-cluster-test/: Cargo.toml
crates/scalar-cluster-test/src/: cluster.rs  faucet.rs  helper.rs  lib.rs  wallet_client.rs
crates/scalar-config/: Cargo.toml  README.md
crates/scalar-config/src/: certificate_deny_config.rs  genesis.rs  lib.rs  local_ip_utils.rs  node.rs  p2p.rs  transaction_deny_config.rs
crates/scalar-consensus-client/: Cargo.toml
crates/scalar-consensus-client/src/: lib.rs
crates/scalar-consensus-common/: Cargo.toml
crates/scalar-consensus-common/src/: lib.rs
crates/scalar-core/: Cargo.toml  Readme.md
crates/scalar-core/benches/: batch_verification_bench.rs  verified_cert_cache_bench.rs
crates/scalar-core/src/: authority.rs  authority_aggregator.rs  authority_client.rs  authority_server.rs  consensus_adapter.rs  consensus_handler.rs  consensus_listener.rs  consensus_service.rs  consensus_throughput_calculator.rs  consensus_validator.rs  db_checkpoint_handler.rs  execution_driver.rs  generate_format.rs  lib.rs  mysticeti_adapter.rs  post_consensus_tx_reorder.rs  runtime.rs  safe_client.rs  scalar_validator.rs  scoring_decision.rs  signature_verifier.rs  stake_aggregator.rs  state_accumulator.rs  storage.rs  streamer.rs  subscription_handler.rs  sui_authority.rs  test_authority_clients.rs  test_utils.rs  transaction_input_loader.rs  transaction_manager.rs  transaction_orchestrator.rs  transaction_signing_filter.rs  verify_indexes.rs
crates/scalar-core/tests/: README.md
crates/scalar-eth-adapter/: Cargo.toml
crates/scalar-eth-adapter/src/: lib.rs
crates/scalar-eth-rpc/: Cargo.toml
crates/scalar-eth-rpc-builder/: Cargo.toml
crates/scalar-eth-server/: Cargo.toml
crates/scalar-eth-server/src/: main.rs
crates/scalar-genesis-builder/: Cargo.toml
crates/scalar-genesis-builder/src/: lib.rs  validator_info.rs
crates/scalar-json-rpc/: Cargo.toml
crates/scalar-json-rpc-types/: Cargo.toml
crates/scalar-json-rpc-types/src/: balance_changes.rs  lib.rs  object_changes.rs  sui_checkpoint.rs  sui_coin.rs  sui_event.rs  sui_extended.rs  sui_governance.rs  sui_move.rs  sui_object.rs  sui_protocol.rs  sui_transaction.rs
crates/scalar-json-rpc/src/: authority_state.rs  axum_router.rs  balance_changes.rs  coin_api.rs  error.rs  governance_api.rs  indexer_api.rs  lib.rs  logger.rs  metrics.rs  move_utils.rs  name_service.rs  object_changes.rs  read_api.rs  transaction_builder_api.rs  transaction_execution_api.rs
crates/scalar-kvstore/: Cargo.toml
crates/scalar-kvstore/src/: client.rs  writer.rs
crates/scalar-move/: Cargo.toml  README.md
crates/scalar-move/src/: lib.rs
crates/scalar-network/: Cargo.toml  build.rs
crates/scalar-network/src/: lib.rs  main.rs  types.rs  utils.rs
crates/scalar-node/: Cargo.toml
crates/scalar-node/src/: admin.rs  fullnode.rs  handle.rs  lib.rs  main.rs  metrics.rs  scalar_node.rs  validator.rs  validator_component.rs  validator_node.rs
crates/scalar-relayer/: Cargo.toml
crates/scalar-rest-api/: Cargo.toml
crates/scalar-reth-node/: Cargo.toml
crates/scalar-reth-node/src/: lib.rs
crates/scalar-swarm/: Cargo.toml
crates/scalar-swarm-config/: Cargo.toml  README.md
crates/scalar-swarm-config/src/: genesis_config.rs  network_config.rs  network_config_builder.rs  node_config_builder.rs  test_utils.rs
crates/scalar-swarm-config/tests/: snapshot_tests.rs
crates/scalar-swarm/src/: lib.rs
crates/scalar-transaction/: Cargo.toml  README.md
crates/scalar-transaction-builder/: Cargo.toml
crates/scalar-transaction-builder/src/: lib.rs
crates/scalar-tss/: Cargo.toml  README.md  build.rs
crates/scalar-tss/proto/: multisig.proto  tofnd.proto
crates/scalar-tss/src/: helper.rs  lib.rs  proto.rs  tofnd.rs  tss.rs  tss_keygen.rs  tss_party.rs  tss_service.rs  tss_signer.rs  types.rs
reth-test-cluster/: Cargo.toml  README.md  test-genesis.json
reth-test-cluster/contracts/: ERC20Example.sol
reth-test-cluster/src/: cluster.rs  config.rs  lib.rs  main.rs  reth_cluster.rs  wallet_client.rs
reth-test-cluster/src/test_case/: deploy_and_call_smart_contract_test.rs  mod.rs  send_raw_transaction_test.rs
reth-test-cluster/src/utils/: transaction.rs
scalar-execution/: Cargo.toml
scalar-execution/cut/src/: plan.rs
scalar-execution/latest/sui-adapter/: Cargo.toml
scalar-execution/latest/sui-move-natives/: Cargo.toml
scalar-execution/latest/sui-verifier/: Cargo.toml
scalar-execution/next-vm/sui-adapter/: Cargo.toml
scalar-execution/next-vm/sui-move-natives/: Cargo.toml
scalar-execution/next-vm/sui-verifier/: Cargo.toml
scalar-execution/src/: executor.rs  latest.rs  lib.rs  lib.template.rs  next_vm.rs  tests.rs  v0.rs  v1.rs  verifier.rs
scalar-execution/v0/sui-adapter/: Cargo.toml
scalar-execution/v0/sui-move-natives/: Cargo.toml
scalar-execution/v0/sui-verifier/: Cargo.toml
scalar-execution/v1/sui-adapter/: Cargo.toml
scalar-execution/v1/sui-move-natives/: Cargo.toml
scalar-execution/v1/sui-verifier/: Cargo.toml
scalar-test-cluster/: Cargo.toml  build.rs
scalar-test-cluster/proto/: consensus.proto
scalar-test-cluster/src/: lib.rs  main.rs
scalar-test-cluster/src/cluster/: builder.rs  cluster.rs  config.rs  consensus.rs  faucet.rs  fullnode.rs  mod.rs  validator.rs
scalar-test-cluster/src/consensus/: consensus_adapter.rs  consensus_service.rs  mod.rs  mysticeti_adapter.rs
scalar-test-cluster/src/core/: authority.rs  authority_server.rs  execution_driver.rs  mod.rs  state_accumulator.rs  transaction_input_loader.rs  transaction_manager.rs
scalar-test-cluster/src/node/: mod.rs  scalar_node.rs  validator.rs
scalar-test-cluster/src/proto/: consensus.rs
scalar-test-cluster/src/swarm/: container-sim.rs  container.rs  mod.rs  node.rs  swarm.rs
scalar-validator/: Cargo.toml
scalar-validator/codecs/: Cargo.toml
scalar-validator/codecs/src/: lib.rs
(+570 files in other folders)
