[workspace]
resolver = "2"

members = [
    "crates/scalar-core",
    "crates/scalar-node",
    "crates/scalar-types",
#    "crates/scalar-tss",
    "crates/shared-crypto",
    "crates/sui-protocol-config",
    "crates/sui-protocol-config-macros",
    "crates/workspace-hack",

#    "narwhal/config",
#    "narwhal/consensus",
#    "narwhal/crypto",
#    "narwhal/dag",
#    "narwhal/examples",
#    "narwhal/executor",
#    "narwhal/network",
#    "narwhal/node",
#    "narwhal/primary",
#    "narwhal/storage",
#    "narwhal/test-utils",
#    "narwhal/types",
#    "narwhal/worker",
]

[workspace.package]
# This version string will be inherited by sui-core, sui-faucet, sui-node, sui-tools, sui-sdk, and sui crates.
version = "1.5.0"

# Dependencies that should be kept in sync through the whole workspace
[workspace.dependencies]
anyhow = "1.0.71"
arc-swap = { version = "1.5.1", features = ["serde"] }
async-recursion = "1.0.4"
async-trait = "0.1.61"
aws-sdk-ec2 = { version = "0.29" }
aws-sdk-s3 = { version = "0.29" }
axum = { version = "0.6.6", default-features = false, features = ["headers", "tokio", "http1", "http2", "json", "matched-path", "original-uri", "form", "query"] }
axum-extra = "0.4.2"
axum-server = { version = "0.4.4", default-features = false, features = ["tls-rustls"] }
backoff = { version = "0.4.0", features = ["futures", "futures-core", "pin-project-lite", "tokio", "tokio_1"] }
base64 = "0.21.2"
bcs = { version = "0.1", default-features = false }
bincode = "1.3.3"
byteorder = "1.4.3"
bytes = "1.4.0"

cfg-if = "1.0.0"
chrono = { version = "0.4.26", features = ["clock", "serde"] }
clap = { version = "4.3.2", features = ["derive"] }
const-str = "0.5.3"
criterion = { version = "0.4.0", features = ["async", "async_tokio", "html_reports"] }

dashmap = "5.4.0"
derive_builder = "0.12.0"
derive_more = "0.99.17"
ed25519 = { version = "1.5.0", features = ["pkcs8", "alloc", "zeroize"] }
ed25519-consensus = { version = "2.0.1", features = ["serde"] }
either = "1.8.0"
enum_dispatch = "^0.3"
expect-test = "1.4.0"
eyre = "0.6.8"
fdlimit = "0.2.1"
fs_extra = "1.3.0"
futures = "0.3.25"
futures-core = "0.3.21"
git-version = "0.3.5"
governor = "0.5.1"
hex = "0.4.3"
hex-literal = "0.3.4"
http = "0.2.8"
http-body = "0.4.5"
humantime = "2.1.0"
hyper = "0.14.20"

im = "15"
indexmap = { version = "1.9.2", features = ["serde"] }

insta = { version = "1.21.1", features = ["redactions", "yaml", "json"] }
itertools = "0.11.0"
lru = "0.12"
mockall = "0.11.4"
more-asserts = "0.3.1"
match_opt = "0.1.2"
num_cpus = "1.15.0"

object_store = { version = "0.7", features = [
  "aws",
  "gcp",
  "azure",
] }
once_cell = "1.18.0"
parking_lot = "0.12.1"
pprof = { version = "0.11.0", features = ["cpp", "frame-pointer", "criterion", "flamegraph"] }
pretty_assertions = "1.3.0"
proc-macro2 = "1.0.47"
prometheus = "0.13.3"
prometheus-http-query = { version = "0.6.6", default_features = false, features = ["rustls-tls"] }
proptest = "1.1.0"
proptest-derive = "0.3.0"
prost = "0.11.8"
prost-build = "0.11.8"
#protobuf = {version="2.28", features=["with-bytes"]}
protobuf = {version="3.3.0", features=["with-bytes"]}
protobuf-src = "1.1.0"
quinn-proto = "^0.10.0"
quote = "1.0.23"
rand = "0.8.5"
rayon = "1.5.3"
regex = "1.7.1"

reqwest = { version = "0.11.18", default_features= false, features = ["blocking", "json", "rustls-tls"] }
roaring = "0.10.1"
rocksdb = { version = "0.21.0", features = ["snappy", "lz4", "zstd", "zlib", "multi-threaded-cf"], default-features = false }
rustversion = "1.0.9"

schemars = { version = "0.8.10", features = ["either"] }
scopeguard = "1.1"
serde = { version = "1.0.144", features = ["derive", "rc"] }
serde-name = "0.2.1"
serde-reflection = "0.3.6"
serde_json = { version = "1.0.95", features = ["preserve_order", "arbitrary_precision"] }
serde_repr = "0.1"
serde_test = "1.0.147"
serde_with = { version = "2.1.0", features = ["hex"] }
serde_yaml = "0.8.26"
signature = "1.6.0"
snap = "1.1.0"
structopt = "0.3.26"
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24.3"
syn = { version = "1.0.104", features = ["full", "derive", "extra-traits"] }

tap = "1.0.1"
tempfile = { version = "3", default-features = false }
thiserror = { version = "1", default-features = false }
thiserror-impl = { version = "1", default-features = false }
tiny-bip39 = { version = "1" }
tinytemplate = { version = "1", default-features = false }
tinyvec = { version = "1", features = ["alloc"] }
tinyvec_macros = { version = "0.1", default-features = false }
tokio = { version = "1", features = ["full", "test-util", "tracing"] }
tokio-io-timeout = { version = "1", default-features = false }
tokio-macros = { version = "2", default-features = false }
tokio-retry = { version = "0.3", default-features = false }
tokio-rustls-2b5c6dc72f624058 = { package = "tokio-rustls", version = "0.23" }
tokio-rustls-adf3d7031871b0af = { package = "tokio-rustls", version = "0.24" }
tokio-stream = { version = "0.1", features = ["net", "sync"] }
tokio-tungstenite = { version = "0.20" }
tokio-util = { version = "0.7", features = ["codec", "compat", "io"] }

tonic = { version = "0.9.2", features = ["transport", "tls"] }
tonic-build = { version = "0.9.2", features = [ "prost", "transport" ] }
tonic-health = "0.9.2"
tower = { version = "0.4.12", features = ["full", "util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.3.4", features = ["cors", "full", "trace", "set-header", "propagate-header"] }
# tower-http = { version="0.4", features = ["trace"] }
tower-layer = "0.3.2"
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.15", default-features = false, features = [
  "std",
  "smallvec",
  "fmt",
  "ansi",
  "time",
  "json",
  "registry",
  "env-filter",
] }

url = "2.3.1"
uuid = { version = "1.1.2", features = ["v4", "fast-rng"] }

#narwhal-config = { path = "narwhal/config" }
#narwhal-consensus = { path = "narwhal/consensus" }
#narwhal-crypto = { path = "narwhal/crypto" }
#narwhal-dag = { path = "narwhal/dag" }
#narwhal-examples = { path = "narwhal/examples" }
#narwhal-executor = { path = "narwhal/executor" }
#narwhal-network = { path = "narwhal/network" }
#narwhal-node = { path = "narwhal/node" }
#narwhal-primary = { path = "narwhal/primary" }
#narwhal-storage = { path = "narwhal/storage" }
#narwhal-test-utils = { path = "narwhal/test-utils" }
#narwhal-types = { path = "narwhal/types" }
#narwhal-worker = { path = "narwhal/worker" }

scalar-core = { path = "crates/scalar-core" }
scalar-node = { path = "crates/scalar-node" }
scalar-types = { path = "crates/scalar-types" }
scalar-tss = { path = "crates/scalar-tss" }
shared-crypto = { path = "crates/shared-crypto" }

sui-protocol-config = { path = "crates/sui-protocol-config" }
sui-protocol-config-macros = { path = "crates/sui-protocol-config-macros" }

config = { git = "https://github.com/MystenLabs/sui", rev = "47d9810bc581b6614f495f346e9659824de2cb5b", package = "narwhal-config" }
crypto = { git = "https://github.com/MystenLabs/sui", rev = "47d9810bc581b6614f495f346e9659824de2cb5b", package = "narwhal-crypto" }
narwhal-config = { git = "https://github.com/MystenLabs/sui", rev = "47d9810bc581b6614f495f346e9659824de2cb5b", package = "narwhal-config" }
narwhal-crypto = { git = "https://github.com/MystenLabs/sui", rev = "47d9810bc581b6614f495f346e9659824de2cb5b", package = "narwhal-crypto" }
narwhal-executor = { git = "https://github.com/MystenLabs/sui", rev = "47d9810bc581b6614f495f346e9659824de2cb5b", package = "narwhal-executor" }
narwhal-network = { git = "https://github.com/MystenLabs/sui", rev = "47d9810bc581b6614f495f346e9659824de2cb5b", package = "narwhal-network" }
narwhal-node = { git = "https://github.com/MystenLabs/sui", rev = "47d9810bc581b6614f495f346e9659824de2cb5b", package = "narwhal-node" }
narwhal-primary = { git = "https://github.com/MystenLabs/sui", rev = "47d9810bc581b6614f495f346e9659824de2cb5b", package = "narwhal-primary" }
narwhal-storage = { git = "https://github.com/MystenLabs/sui", rev = "47d9810bc581b6614f495f346e9659824de2cb5b", package = "narwhal-storage" }
narwhal-test-utils = { git = "https://github.com/MystenLabs/sui", rev = "47d9810bc581b6614f495f346e9659824de2cb5b", package = "narwhal-test-utils" }
narwhal-types = { git = "https://github.com/MystenLabs/sui", rev = "47d9810bc581b6614f495f346e9659824de2cb5b", package = "narwhal-types" }
narwhal-worker = { git = "https://github.com/MystenLabs/sui", rev = "47d9810bc581b6614f495f346e9659824de2cb5b", package = "narwhal-worker" }

# anemo dependencies
anemo = { git = "https://github.com/mystenlabs/anemo.git", rev = "1169850e6af127397068cd86764c29b1d49dbe35" }
anemo-build = { git = "https://github.com/mystenlabs/anemo.git", rev = "1169850e6af127397068cd86764c29b1d49dbe35" }
anemo-cli = { git = "https://github.com/mystenlabs/anemo.git", rev = "1169850e6af127397068cd86764c29b1d49dbe35"}
anemo-tower = { git = "https://github.com/mystenlabs/anemo.git", rev = "1169850e6af127397068cd86764c29b1d49dbe35"}

fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "802c1ac98061687d6ce024849c747a250dbeea52" }
fastcrypto-tbls = { git = "https://github.com/MystenLabs/fastcrypto", rev = "802c1ac98061687d6ce024849c747a250dbeea52"}
fastcrypto-zkp = { git = "https://github.com/MystenLabs/fastcrypto", rev = "802c1ac98061687d6ce024849c747a250dbeea52", package = "fastcrypto-zkp" }

mysten-common = { git = "https://github.com/MystenLabs/sui", rev = "47d9810bc581b6614f495f346e9659824de2cb5b", package = "mysten-common" }
mysten-metrics = { git = "https://github.com/MystenLabs/sui", rev = "47d9810bc581b6614f495f346e9659824de2cb5b", package = "mysten-metrics" }
mysten-network = { git = "https://github.com/MystenLabs/sui", rev = "47d9810bc581b6614f495f346e9659824de2cb5b", package = "mysten-network" }
mysten-util-mem = { git = "https://github.com/MystenLabs/sui", rev = "47d9810bc581b6614f495f346e9659824de2cb5b", package = "mysten-util-mem" }
mysten-util-mem-derive = { git = "https://github.com/MystenLabs/sui", rev = "47d9810bc581b6614f495f346e9659824de2cb5b", package = "mysten-util-mem-derive" }

sui-macros= { git = "https://github.com/MystenLabs/sui", rev = "47d9810bc581b6614f495f346e9659824de2cb5b", package = "sui-macros" }
sui-proc-macros= { git = "https://github.com/MystenLabs/sui", rev = "47d9810bc581b6614f495f346e9659824de2cb5b", package = "sui-macros" }
sui-keys= { git = "https://github.com/MystenLabs/sui", rev = "47d9810bc581b6614f495f346e9659824de2cb5b", package = "sui-keys" }

telemetry-subscribers = { git = "https://github.com/MystenLabs/sui", rev = "47d9810bc581b6614f495f346e9659824de2cb5b", package = "telemetry-subscribers" }
store = { git = "https://github.com/MystenLabs/sui", rev = "47d9810bc581b6614f495f346e9659824de2cb5b", package = "typed-store" }
store-derive = { git = "https://github.com/MystenLabs/sui", rev = "47d9810bc581b6614f495f346e9659824de2cb5b", package = "typed-store-derive" }
typed-store = { git = "https://github.com/MystenLabs/sui", rev = "47d9810bc581b6614f495f346e9659824de2cb5b", package = "typed-store" }
typed-store-derive = { git = "https://github.com/MystenLabs/sui", rev = "47d9810bc581b6614f495f346e9659824de2cb5b", package = "typed-store-derive" }

workspace-hack = "0.1.0"

#From move workspace
ref-cast = "1.0.6"
ethnum = "1.0.4"
uint = "0.9.4"
num = "0.4.0"
primitive-types = { version = "0.10.1", features = ["impl-serde"]}
arbitrary = { version = "1.1.7", features = ["derive", "derive_arbitrary"] }